# Minesweeper

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: ANSI-color-codes.h  cell.cpp  cell.h  main.cpp  minefield.cpp  minefield.h  playerinput.cpp  playerinput.h
